--- a/taylor/project1.lpi
+++ b/taylor/project1.lpi
@@ -30,7 +30,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -39,9 +39,15 @@
         <Filename Value="unit1.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="mresult.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="mResult"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
